solved spacings

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -12,7 +12,6 @@
 }
 
 .receptacle-card{
-  background-color: pink;
   height: 500px;
   display: flex;
   flex-direction: column;
@@ -26,36 +25,43 @@
     font-weight: 400;
     text-decoration: none;
     margin: 0;
-    font-size: 2em;
+    font-size: 30px;
     padding: 15px;
     color: white;
-    position: relative;
-    bottom: 35px;
+    line-height: 1;
+
   }
   h3{
     font-style: normal;
     font-weight: 400;
     text-decoration: none;
     margin: 0;
-    font-size: 1em;
+    font-size: 20px;
     padding: 15px;
     color: white;
     opacity: .7;
+    margin-top: 4px;
   }
-}
-.card-head{
-  display: flex;
-  justify-content: left;
-  padding: 16px;
-  width: 100%;
-}
-.card-body{
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  width: 100%;
+
 }
 
+.card-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+}
+.card-info{
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+  justify-content: flex-start;
+  h2, h3{
+    padding: 0;
+
+  }
+}
 
 .show-card{
   background-color: pink;
@@ -77,8 +83,6 @@
     font-size: 2em;
     padding: 15px;
     color: white;
-    position: relative;
-    bottom: 35px;
   }
   h3{
     font-style: normal;
