--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -29,6 +29,7 @@
   display:flex;
   flex-wrap: 1;
   margin: 0px 20px;
+  padding-bottom: 20px;
 }
 
 .map-section{
